--- a/frontend/microfrontend/package.json
+++ b/frontend/microfrontend/package.json
@@ -7,7 +7,8 @@
       "auth_microfrontend",
       "shared_microfrontend",
       "main_microfrontend",
-      "profile_microfrontend"
+      "profile_microfrontend",
+      "places_microfrontend"
     ]
   },
   "scripts": {
