--- a/frontend/microfrontend/package.json
+++ b/frontend/microfrontend/package.json
@@ -8,7 +8,8 @@
       "shared_microfrontend",
       "main_microfrontend",
       "profile_microfrontend",
-      "places_microfrontend"
+      "places_microfrontend",
+      "shared-library"
     ]
   },
   "scripts": {
