--- a/frontend/microfrontend/package.json
+++ b/frontend/microfrontend/package.json
@@ -14,9 +14,10 @@
   },
   "scripts": {
     "start": "lerna run --parallel start",
-    "build": "lerna run build"
+    "build": "npm install && lerna run build"
   },
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "webpack-cli": "^4.7.2"
   }
 }
